# tradecoin

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/platform/: APlatform.cpp  APlatform.h  ARestPlatform.cpp  ARestPlatform.h
src/common/platform/test/: Test.cpp  Test.h
src/gatherer/: Gatherer.cpp  Gatherer.h  main.cpp
